# usbvfiod

./: .nixos-test-history  Cargo.toml  README.md  flake.nix
docs/: how-to-demo.md  overview.md
docs/developers/: architecture.md  guidelines.md  quick-start.md  vm-test.md  vmTest.md
docs/users/: basic.md  security.md
nix/: tests.nix  tests_interactive.nix
nix/windows/: chv-vm-module.nix  make-cloud-hypervisor-config.nix  windows-image-raw.nix  windows-test.nix
src/: async_runtime.rs  cli.rs  dynamic_bus.rs  hotplug_server.rs  lib.rs  main.rs  memory_segment.rs  xhci_backend.rs
src/device/: bus.rs  mod.rs  register_set.rs
src/device/pcap/: meta.rs  mod.rs  packet.rs  writer.rs
src/device/pci/: config_space.rs  constants.rs  device_slots.rs  error_map.rs  mod.rs  msix_table.rs  nusb.rs  pcap.rs  real_usb_device.rs  realdevice.rs  registers.rs  request.rs  rings.rs  trb.rs  usbrequest.rs  xhci.rs  xhci_async.rs
src/device/xhci/: command_ring.rs  doorbell.rs  endpoint.rs  endpoint_handle.rs  endpoint_launcher.rs  event_ring.rs  hotplug_endpoint_handle.rs  interrupter.rs  linked_ring.rs  mod.rs  nusb.rs  port.rs  real_device.rs  real_endpoint_handle.rs  registers.rs  slot_manager.rs  trb.rs  usbrequest.rs
src/hotplug_protocol/: command.rs  device_paths.rs  mod.rs  response.rs
src/one_indexed_array/: mod.rs
src/oneshot_anyhow/: mod.rs
