[package]
authors = ["Cyberus Technology GmbH"]
description = "A vfio-user server for USB pass-through."
name = "usbvfiod"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cyberus-technology/usbvfiod"
keywords = ["usb", "vfio"]
categories = ["emulators", "hardware-support"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.97", default-features = false, features = ["std"] }
arc-swap = "1.7.1"
clap = { version = "4.5.35", features = [
  "cargo",
  "color",
  "derive",
  "error-context",
  "help",
  "std",
  "usage",
], default-features = false }
memmap2 = "0.9.5"
nusb = { version = "0.2.0", default-features = false }
thiserror = { version = "2.0.12" }
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = "0.7.17"
tracing = { version = "0.1.41", default-features = false, features = [
  "log",
  "std",
] }
tracing-log = { version = "0.2.0", default-features = false, features = [
  "std",
] }
tracing-subscriber = { version = "0.3.19", default-features = false, features = [
  "std",
  "alloc",
  "fmt",
  "env-filter",
  "ansi",
  "tracing-log",
] }
vfio-bindings = { version = "0.6.0", default-features = false }
vfio_user = { version = "0.1.1" }
vmm-sys-util = { version = "0.15.0" }

[dev-dependencies]
proptest = "1.6.0"
libc = "0.2.172"

[lints.rust]
missing_debug_implementations = "deny"

[lints.clippy]
# Any clippy lint (group) in alphabetical order:
# https://rust-lang.github.io/rust-clippy/master/index.html

# Groups
all = "deny"
complexity = "deny"
correctness = "deny"
perf = "deny"
style = "deny"
suspicious = "deny"
nursery = "deny"
cargo = "deny"

# Individual Lints
assertions_on_result_states = "deny"
if_not_else = "deny"
manual_string_new = "deny"
map_unwrap_or = "deny"
# Needs some work before we can enable this.
#needless_pass_by_value = "deny"
redundant_else = "deny"
semicolon_if_nothing_returned = "deny"
undocumented_unsafe_blocks = "deny"
uninlined_format_args = "deny"
unnecessary_semicolon = "deny"
must_use_candidate = "deny"
# We need to allow this for some transitive dependencies.
multiple_crate_versions = { level = "allow", priority = 1 }

[lints.rustdoc]
all = "deny"
